# Backtests

./: .env.example  .gitignore  ALT-DATA-FUNDAMENTALS-ROADMAP.md  ARCHITECTURE.md  CATALOG.md  CLAUDE.md  CRYPTO-ML-ROADMAP.md  Dokument_Externe_Daten.txt  FOOTBALL-VALUE-BETTING-ROADMAP.md  IDEAS-HANDOFF.md  ML-COMMODITY-SIGNAL-ROADMAP.md  NEXT-STRATEGIES-AND-LIVE-SYSTEM.md  PORTFOLIO-SUMMARY.md  Prop-Edge-Framework.md  README.md  SMC-SWEEP-BOS-SPEC.md  config.example.yaml  progress.json  pyproject.toml  requirements.txt
.github/workflows/: cti-daily.yml
agent/: README.md  __init__.py  alpha_factory.py  cli.py  guardrails.py  loop.py
agent/llm/: __init__.py  backend.py
agent/rag/: __init__.py  retriever.py
analysis/: btc_hour_weekday_heatmap.py  btc_hourly_return.py  btc_hourly_volatility.py  btc_short_10et_janestreet.py  btc_short_10utc.py  calendar_coverage.py  discovery_results.json  seasonal_discovery.py  seasonal_monthly_screen.py
analysis/plots/: btc_hour_weekday_mean_bps.csv  btc_hourly_return.csv  btc_short_10et_2026_table.csv  btc_short_10utc_table.csv
apps/api/: academy.py  altdata.py  attribution.py  charts.py  conditional.py  cot.py  data.py  execution.py  factory.py  featurestore.py  main.py  news.py  optimize.py  pairs.py  regime.py  requirements-api.txt  risk.py  seasonal.py  settings.py  sidecar_entry.py  swarm.py  switchboard.py
apps/web/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/web/src-tauri/binaries/: README.md  quant-os-api-aarch64-apple-darwin
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: README.md  icon.icns
apps/web/src-tauri/resources/: .gitignore  README.md
apps/web/src-tauri/src/: lib.rs  license.rs  main.rs
content/academy/: curriculum.json
cpp/quant_kernel/: CMakeLists.txt  README.md  pyproject.toml
cpp/quant_kernel/src/: quant_kernel.cpp
data/: execution_log.csv
data/news/: items.json  lessons.json  market.json
data/seasonal/: patterns.json
docs/: DESKTOP_BUILD.md  QUANT_OS_HANDBUCH.md  QUANT_OS_ROADMAP.md
fundamentals/: HYPOTHESES.md  tradeability.md
live/: README.md  calendar.yaml  engine.py  ledger.py  notify.py  oms.py  run_daily.py
live/outbox/: 2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-23.md
live/signals/: dxy_regime_signal.py  (+5 more)
news/: __init__.py  agent.py  briefing.py  feed.py  feedback.py  llm_workflow.py  market.py  models.py  sources.py  store.py
reports/: CONFIRMATION_pdf_and_pairs_2026-06-26.md  OVERVIEW.md  build_comparison.py
scripts/: build_registry.py  build_sidecar_mac.sh  build_sidecar_win.ps1  bundle_data.ps1  bundle_data.sh  crypto_live_signal.py  fetch_crypto_phase4.py  fetch_crypto_universe.py  fetch_intraday.py  football_live_paper.py  make_app_icon.py  pairs_scan.py  regime_radar.py  seasonal_scan.py
strategies/: REPORT_TEMPLATE.md  seasonal_calendar.yaml
tests/: test_agent_causality.py  test_agent_guardrails.py  test_agent_llm.py  test_agent_loop.py  test_agent_rag.py  test_altdata.py  test_api.py  test_attribution.py  test_backtest.py  test_backtest_event.py  test_commodity_features.py  test_conditional.py  test_cot.py  test_cot_signals.py  test_cpcv.py  test_cross_sectional.py  test_crypto_pegged_guard.py  test_crypto_universe.py  test_datasource.py  test_devig.py  test_edgar_sue.py  test_execution.py  test_feature_store.py  test_footprint.py  test_futures_curve.py  test_ib_data.py  test_kernel.py  test_keystore.py  test_lake.py  test_live_calendar.py  test_metrics.py  test_ml_portfolio.py  test_odds_live.py  test_oms.py  test_optimize.py  test_pairs.py  test_pit.py  test_price_images.py  test_regime.py  test_registry.py  (+9 more)
(+761 files in other folders)
